<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity">

        <TextView
            android:id="@+id/newAppointmentTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/create_new_appointment"
            android:textSize="22sp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:textAlignment="center"
            />

        <EditText
            android:id="@+id/appointmentStatusEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:ems="10"
            android:hint="@string/status"
            android:inputType="text"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/newAppointmentTextView"
            />

        <EditText
            android:id="@+id/appointmentTypeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:ems="10"
            android:hint="@string/type"
            android:inputType="text"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/appointmentStatusEditText"
            />

        <EditText
            android:id="@+id/appointmentDescriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="text"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/appointmentTypeEditText"
            />

        <TextView
            android:id="@+id/startTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:textAlignment="center"
            android:text="Start:"
            android:layout_below="@id/appointmentDescriptionEditText"
            />

        <TimePicker
            android:id="@+id/appointmentStart"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_below="@id/startTextView"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:ems="2"
            android:inputType="time"
            android:timePickerMode="spinner" />

        <TextView
            android:id="@+id/endTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:textAlignment="center"
            android:text="End:"
            android:layout_below="@id/appointmentStart"
            />
        <TimePicker
            android:id="@+id/appointmentEnd"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_below="@id/endTextView"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:ems="2"
            android:inputType="time"
            android:timePickerMode="spinner" />

        <TextView
            android:id="@+id/appointmentDateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:textAlignment="center"
            android:text="@string/select_birth_date"
            android:layout_below="@id/appointmentEnd"
            />
        <DatePicker
            android:id="@+id/birthDateEditText"
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            android:layout_marginTop="@dimen/default_margin"
            android:inputType="date"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/appointmentDateTextView"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            />

        <NumberPicker
            android:id="@+id/availableSlotsNumber"
            android:layout_width="201dp"
            android:layout_height="90dp"
            android:layout_below="@id/birthDateEditText"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginEnd="100dp"
            android:layout_marginRight="@dimen/default_margin"
            android:ems="3"
            android:inputType="numberDecimal" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/availableSlotsNumber"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            >
            <Button
                android:id="@+id/editButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Edit"
                android:onClick="Edit"
                android:layout_marginTop="20dp"
                />

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="Delete"
                android:onClick="Delete"
                android:layout_marginTop="20dp"
                />


        </LinearLayout>
    </RelativeLayout>
</ScrollView>